# SPLTokenMint

./: Anchor.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
programs/custom-token/: Cargo.toml
programs/custom-token/src/: lib.rs
tests/: create-token.ts  custom-token.ts
